<resources>
    <string name="app_name">Tara Kain</string>
    <string name="store_of_the_day">Store of the Day</string>
    <string name="favorites_stores">Favorite Stores</string>
    <string name="my_stores">My Stores</string>
    <string name="heads_or_tails">Heads or Tails</string>
    <string name="featured_stores">Featured Stores</string>
    <string name="promos">Promos</string>
    <string name="choose">Choose</string>
    <string name="randomize">Randomize</string>
    <string name="flip">Flip</string>
    <string name="check_stores">Check Stores</string>
    <string name="check_favorites">Check Favorites</string>

    <string name="choose_category">Choose a category</string>
    <string name="popular_kainan">Popular Kainan</string>
    <string name="near_me">Restaurants Near Me</string>
    <string name="recommendation">Recommended</string>
    <string name="my_favorites">My Favorites</string>
    <string name="faqs">FAQs</string>
    <string name="contact_support">Contact Support</string>
    <string name="store_saved_successful">Store saved successfully!</string>
    <string name="store_deleted_successful">Store deleted successfully!</string>

    <!-- Categories -->

    <string name="all">All</string>
    <string name="pinoy">Pinoy</string>
    <string name="american">American</string>
    <string name="mexican">Mexican</string>
    <string name="japanese">Japanese</string>
    <string name="chinese">Chinese</string>
    <string name="korean">Korean</string>
    <string name="thai">Thain</string>
    <string name="italian">Italian</string>
    <string name="five_star">Five Star</string>
    <string name="cafe">Cafe</string>
    <string name="buffet">buffet</string>
    <string name="bar">Bar</string>
    <string name="fast_food">Fast Food</string>
    <string name="latest">New</string>

    <!-- Common -->
    <string name="done">Done</string>
    <string name="store">Store</string>
    <string name="add_store">Add Store</string>
    <string name="edit_store">Edit Store</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add_favorite">Add To Favorites</string>
    <string name="min_price">Minimum Price</string>
    <string name="max_price">Maximum Price</string>

    <string-array name="food_categories">
        <item name="all">All</item>
        <item name="pinoy_food">Pinoy</item>
        <item name="mexican_food">Mexican</item>
        <item name="chinese_food">Chinese</item>
        <item name="japanese_food">Japanese</item>
        <item name="korean_food">Korean</item>
        <item name="thai food">Thai</item>
        <item name="american_food">American</item>
        <item name="italian_food">Italian</item>
        <item name="cafe">Cafe</item>
        <item name="buffet">Buffet and Unli</item>
        <item name="bar">Resto Bar</item>
        <item name="five_star_food">Five Star Restaurant</item>
        <item name="fast_food">Fast Food</item>
    </string-array>

    <string-array name="pinoy_resto">
        <item name="mang_inasal">Mang Inasal</item>
        <item name="bacolod_inasal">Bacolod Inasal</item>
        <item name="kamay_kainan">Kamay Kainan</item>
        <item name="cabalen">Cabalen</item>
        <item name="balai_ilocos">Balai Ilocos</item>
        <item name="baliwag">Baliwag</item>
        <item name="kkk">KKK</item>
        <item name="cafe_bonifacio">Cafe Bonifacio</item>
        <item name="manilachon">Manilachon</item>
        <item name="davao_grill">Davao Grill</item>
        <item name="goldilocks">Goldilocks</item>
        <item name="max">Max\'s</item>
        <item name="razon">Razon\'s of Guagua</item>
        <item name="tapa_king">Tapa King</item>
        <item name="sisig">Sisig Hooray</item>
        <item name="barrio_fiesta">Barrio Fiesta</item>
        <item name="kuya_j">Kuya J</item>
        <item name="mesa">Mesa</item>
        <item name="goto_king">Goto King</item>
        <item name="mangan">Mangan</item>
        <item name="classic_savory">Classic Savory</item>
        <item name="adobo_connection">Adobo Connection</item>
        <item name="binalot">Binalot</item>
        <item name="kamayan">Kamayan</item>
        <item name="buddys">Buddy\'s</item>
        <item name="inengs">Ineng\'s BBQ</item>
    </string-array>

    <string-array name="japanese_resto">
        <item name="">Tokyo Tokyo</item>
        <item name="">Yoshinoya</item>
        <item name="">Pepperlunch</item>
        <item name="">Yabu</item>
        <item name="">Maisen</item>
        <item name="">SumoSam</item>
        <item name="">Sambokojin</item>
        <item name="">Ippon Yari</item>
        <item name="">Ippudo</item>
        <item name="">Muragame Udon</item>
        <item name="">Ramen Nagi</item>
        <item name="">Teriyaki Boy</item>
        <item name="">Komoro</item>
        <item name="">Saisaki</item>
        <item name="">Teppanyaki</item>
        <item name="">Tenya</item>
    </string-array>

    <string-array name="korean">
        <item name="">Sambokojin</item>
        <item name="">Kyochon</item>
        <item name="">Bonchon</item>
        <item name="">Oriental Seoul</item>
        <item name="">Mr. Kimbob</item>
        <item name="">Samgyupsalamat</item>
        <item name="">Romantic Baboy</item>
        <item name="">Jang Ga Nae</item>
    </string-array>

    <string-array name="thai">
        <item name="">Siam Thai</item>
        <item name="">Soi Thai</item>
        <item name="">Nav - Modern Thai Cuisine</item>
    </string-array>

    <string-array name="chinese_resto">
        <item name="">Din Tai Fung</item>
        <item name="">Fat Fook</item>
        <item name="">Masuki</item>
        <item name="">Chowking</item>
        <item name="">Mey Lin</item>
        <item name="">Hen Lin</item>
        <item name="">Mann Hann</item>
        <item name="">Tim Ho Wan</item>
        <item name="">Lugang Cafe</item>
        <item name="">Luk Yuen</item>
        <item name="">Hainanese</item>
        <item name="">Superbowl of China</item>
        <item name="">Siomai King</item>
        <item name="">Master Siomai</item>
        <item name="">Siomai House</item>
    </string-array>

    <string-array name="mexican">
        <item name="">Chili\'s</item>
        <item name="">Taco Bell</item>
        <item name="">El Pollo Loco</item>
        <item name="">Mexicali</item>
        <item name="">Dulcinea</item>
        <item name="">El Chupacabra</item>
        <item name="">Silantro</item>
        <item name="">La Carnita</item>
        <item name="">Army Navy</item>
        <item name="">Chihuahua</item>
        <item name="">Senor Pollo</item>
        <item name="">Mad Marks</item>
    </string-array>

    <string-array name="italian">
        <item name="">Contis</item>
        <item name="">Italiannis</item>
        <item name="">House of Lasagna</item>
        <item name="">Pound</item>
        <item name="">Cibo</item>
        <item name="">Sbarro</item>
        <item name="">Pizza Hut</item>
        <item name="">Shakey\'s</item>
        <item name="">Amici</item>
        <item name="">Piadina Italiana</item>
        <item name="">The Old Spaghetti House</item>
        <item name="">Linguini Fini</item>
    </string-array>

    <string-array name="american">
        <item name="">Pancake House</item>
        <item name="">TGIF</item>
        <item name="">Dennys</item>
        <item name="">Taco Bell</item>
        <item name="">Kenny Rogers</item>
        <item name="">Army Navy</item>
        <item name="">Chili\'s</item>
        <item name="">Burger King</item>
        <item name="">Racks</item>
        <item name="">Papa John\'s</item>
        <item name="">Yellow Cab Pizza</item>
        <item name="">Buffalo\'s Wings N\' Things</item>
        <item name="">Case Verde</item>
        <item name="">Frankies Buffalo Wings</item>
    </string-array>

    <string-array name="cafe">
        <item name="">Starbucks</item>
        <item name="">Zoo Coffee</item>
        <item name="">Sunnies Cafe</item>
        <item name="">Bo\'s Coffee</item>
        <item name="">The Coffee Bean Tea Leaf</item>
        <item name="">Seattle\'s Best Coffee</item>
        <item name="">Figaro</item>
        <item name="">St. Marc Cafe</item>
        <item name="">Mozu Cafe</item>
        <item name="">Lugang Cafe</item>
        <item name="">Pie Face</item>
        <item name="">Satchmi</item>
        <item name="">The Lost Bread</item>
        <item name="">Hobingsu Cafe</item>
        <item name="">Yo! Panda</item>
    </string-array>

    <string-array name="buffet">
        <item name="">Vikings</item>
        <item name="">NIU (Vikings)</item>
        <item name="">Sambokojin</item>
        <item name="">Dads</item>
        <item name="">Yakimix</item>
        <item name="">Buffet 101</item>
        <item name="">Four Seasons</item>
        <item name="">Kamay Kainan</item>
        <item name="">Cabalen</item>
        <item name="">Circles</item>
        <item name="">Spiral</item>
        <item name="">Siam Thai</item>
        <item name="">Cafe Ilang-Ilang</item>
    </string-array>

    <string-array name="bar">
        <item name="">Gerry\'s Grill</item>
        <item name="">Giligan\'s</item>
        <item name="">Salamangka</item>
    </string-array>

    <string-array name="fast_food">
        <item name="">Jollibee</item>
        <item name="">Mcdonalds</item>
        <item name="">Chowking</item>
        <item name="">KFC</item>
        <item name="">Wendy\'s</item>
        <item name="">Burger King</item>
        <item name="">Greenwich</item>
        <item name="">Shakeys</item>
        <item name="">Army Navy</item>
        <item name="">Zarks</item>
        <item name="">8Cuts</item>
    </string-array>

    <string-array name="five_star">
        <item name="">Mary Grace</item>
        <item name="">Wildflour</item>
        <item name="">Aristocrat</item>
        <item name="">NIU by Vikings</item>
        <item name="">Locavore</item>
        <item name="">Cafe Juanita</item>
    </string-array>

    <!-- ADS -->
    <string-array name="recommended">
        <item name="">Mangan</item>
        <item name="">Cafe Bonifacio</item>
        <item name="">Rubs</item>
        <item name="">Locavore</item>
        <item name="">Siam Thai</item>
        <item name="">Juan Bistro</item>
        <item name="">Kanto Freestyle</item>
        <item name="">Bullchef</item>
    </string-array>

    <string name="tails">Tails</string>
    <string name="heads">Heads</string>
    <string name="empty_state_store">There are no stores at the moment.</string>
    <string name="randomize_instruction">Start randomizing \n by adding more stores</string>
    <string name="flip_instruction">Start flipping by adding \n at least 2 stores</string>

</resources>
