<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_store_of_the_day"
          android:icon="@drawable/ic_spoon_fork"
          android:title="@string/store_of_the_day" />
    <item android:id="@+id/nav_favorite_stores"
            android:icon="@drawable/ic_heart"
            android:title="@string/favorites_stores"/>
    <item android:id="@+id/nav_featured_stores"
          android:icon="@drawable/ic_star"
          android:title="@string/featured_stores" />

    <item android:id="@+id/nav_promos"
            android:icon="@drawable/ic_list"
            android:title="@string/promos" />

    <item android:id="@+id/nav_heads_or_tails"
            android:icon="@drawable/ic_flip"
            android:title="@string/heads_or_tails" />
</menu>