<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:style="http://schemas.android.com/tools">

    <data>
        <variable
                name="viewModel"
                type="com.tokoy.tosa.tarakain.viewmodels.AddStoreViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/toolbar_height"
            android:layout_marginHorizontal="@dimen/layout_margin">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_store"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:error="@{viewModel.nameError}"
                app:errorEnabled="true"
                app:errorTextColor="@color/colorRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/store_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.newStore.name}"
                    android:hint="@string/store" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btn_add_store"
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:onClick="@{() -> viewModel.addStore()}"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_to_favorites" />

        <CheckBox
                android:id="@+id/add_to_favorites"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_favorite"
                android:checked="@={viewModel.newStore.favorite}"
                android:button="@drawable/checkbox_favorite"
                app:layout_constraintEnd_toStartOf="@id/_center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_minimum_price" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_choose_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_store">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" "
                    android:hint="@string/choose_category"
                    style:ignore="HardcodedText" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:entries="@{viewModel.categoryNames}"
                android:selectedItemPosition="@={viewModel.categoryIndex}"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_store"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/_center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintGuide_percent="0.5"
                android:orientation="vertical" />

        <TextView
                android:id="@+id/text_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="16dp"
                android:text="@string/price_optional"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_choose_category" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_minimum_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorTextColor="@color/colorRed"
                app:error="@{viewModel.minPriceError}"
                app:errorEnabled="true"
                android:hint="@string/min_price"
                app:layout_constraintEnd_toStartOf="@+id/_center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_price">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/min_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint=" "
                    android:text="@={viewModel.newStore.minPrice}"
                    android:inputType="number"
                    style:ignore="HardcodedText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/max_price"
                app:error="@{viewModel.maxPriceError}"
                app:errorEnabled="true"
                app:errorTextColor="@color/colorRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/_center"
                app:layout_constraintTop_toBottomOf="@id/text_price">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/max_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint=" "
                    android:text="@={viewModel.newStore.maxPrice}"
                    android:inputType="numberDecimal"
                    style:ignore="HardcodedText" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>