<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_right"
            android:layout_marginEnd="16dp"
            android:text="@string/store_of_the_day"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/img_store"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:id="@+id/img_store"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_dices"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/text_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="Tokyo Tokyo"
            app:layout_constraintBottom_toTopOf="@+id/img_store"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Tokyo Tokyo" />

    <Button
            android:id="@+id/btn_randomize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/randomize"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_choose"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_favorite" />

    <Button
            android:id="@+id/btn_choose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/choose"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/ic_heart"
            android:drawablePadding="8dp"
            android:background="@null"
            android:text="Add to Favorites"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_store" />


    <!--<GridView-->
    <!--android:layout_width="395dp"-->
    <!--android:layout_height="680dp"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--android:layout_marginLeft="8dp"-->
    <!--android:layout_marginStart="8dp"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:layout_marginRight="8dp"-->
    <!--android:layout_marginTop="16dp"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->
    <!--android:id="@+id/category_grid"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>